--- a/components.html
+++ b/components.html
@@ -23,25 +23,40 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="body | bg-light flex flex-justify-center flex-align-center">
-    <div class="card | bg-white container flex">
+    <div class="card | bg-white container flex ff-sans-serif">
       <div class="image |">
         <figure>
           <img src="images/drawers.jpg" alt="drawers" />
         </figure>
       </div>
       <div class="content |">
-        <h1 class="title |">
+        <h1 class="title | fs-900 fw-700 text-dark">
           Shift the overall look and feel by adding these wonderful touches to
           furniture in your home
         </h1>
-        <p class="text |">
+        <p class="text | fw-500 text-desat">
           Ever been in a room and felt like something was missing? Perhaps it
           felt slightly bare and uninviting. I’ve got some simple tips to help
           you make any room feel complete.
         </p>
-        <p class="name |">Michelle Appleton</p>
-        <p class="date |">28 Jun 2020</p>
-        <p class="share |">Share</p>
+        <div class="flex">
+          <img class="avatar" src="images/avatar-michelle.jpg" alt="avatar" />
+          <div class="flex flex-direction-column" style="flex-grow: 1">
+            <p class="name | text-dark fw-700">Michelle Appleton</p>
+            <p class="date | text-desat fw-500">28 Jun 2020</p>
+          </div>
+          <button class="share-btn |">
+            <figure style="height: auto">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                <!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                <path
+                  d="M568.9 143.5l-150.9-138.2C404.8-6.773 384 3.039 384 21.84V96C241.2 97.63 128 126.1 128 260.6c0 54.3 35.2 108.1 74.08 136.2c12.14 8.781 29.42-2.238 24.94-16.46C186.7 252.2 256 224 384 223.1v74.2c0 18.82 20.84 28.59 34.02 16.51l150.9-138.2C578.4 167.8 578.4 152.2 568.9 143.5zM416 384c-17.67 0-32 14.33-32 32v31.1l-320-.0013V128h32c17.67 0 32-14.32 32-32S113.7 64 96 64H64C28.65 64 0 92.65 0 128v319.1c0 35.34 28.65 64 64 64l320-.0013c35.35 0 64-28.66 64-64V416C448 398.3 433.7 384 416 384z"
+                />
+              </svg>
+            </figure>
+          </button>
+          <p class="share | hidden">Share</p>
+        </div>
       </div>
     </div>
   </body>
