--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
   </head>
   <body class="body | bg-light flex flex-justify-center flex-align-center">
     <div class="card | bg-white container flex ff-sans-serif">
@@ -55,7 +56,7 @@
                   />
                 </svg>
               </figure>
-              <div class="share | bg-dark flex flex-align-center">
+              <div class="share hidden | bg-dark flex flex-align-center">
                 <p
                   class="text-primary ff-sans-serif uppercase letter-spacing-large"
                 >
@@ -71,6 +72,32 @@
                   ><img src="images/icon-pinterest.svg" alt="pinterest"
                 /></a>
               </div>
+            </button>
+          </div>
+        </div>
+        <div class="flex flex-justify-space flex-align-center">
+          <div class="share share-mobile | bg-dark flex flex-align-center">
+            <p
+              class="text-primary ff-sans-serif uppercase letter-spacing-large"
+            >
+              Share
+            </p>
+            <a href="#"
+              ><img src="images/icon-facebook.svg" alt="facebook"
+            /></a>
+            <a href="#"><img src="images/icon-twitter.svg" alt="twitter" /></a>
+            <a href="#" style="flex-grow:1;""
+              ><img src="images/icon-pinterest.svg" alt="pinterest"
+            /></a>
+            <button class="share-btn |">
+              <figure style="height: auto">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                  <!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                  <path
+                    d="M568.9 143.5l-150.9-138.2C404.8-6.773 384 3.039 384 21.84V96C241.2 97.63 128 126.1 128 260.6c0 54.3 35.2 108.1 74.08 136.2c12.14 8.781 29.42-2.238 24.94-16.46C186.7 252.2 256 224 384 223.1v74.2c0 18.82 20.84 28.59 34.02 16.51l150.9-138.2C578.4 167.8 578.4 152.2 568.9 143.5zM416 384c-17.67 0-32 14.33-32 32v31.1l-320-.0013V128h32c17.67 0 32-14.32 32-32S113.7 64 96 64H64C28.65 64 0 92.65 0 128v319.1c0 35.34 28.65 64 64 64l320-.0013c35.35 0 64-28.66 64-64V416C448 398.3 433.7 384 416 384z"
+                  />
+                </svg>
+              </figure>
             </button>
           </div>
         </div>
