--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
         </div>
         <div class="flex flex-justify-space flex-align-center">
-          <div class="share share-mobile | bg-dark flex flex-align-center">
+          <div class="share share-mobile hidden | bg-dark flex flex-align-center">
             <p
               class="text-primary ff-sans-serif uppercase letter-spacing-large"
             >
